[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drainage-extractor"
version = "1.0.0"
description = "Desktop app that extracts drainage networks (streams, Strahler order, watersheds) from digital elevation models."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ren Murry", email = "renthungo86@gmail.com" }]
requires-python = ">=3.10"
keywords = ["dem", "hydrology", "gis", "drainage", "streams", "watershed", "whiteboxtools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "rasterio>=1.3.8",
    "pyproj>=3.5",
    "shapely>=2.0",
    "geopandas>=0.14",
    "pyogrio>=0.7",
    "simplekml>=1.3.6",
    "ezdxf>=1.1",
    "psutil>=5.9",
    "platformdirs>=3.0",
    "PySide6-Essentials>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "pyinstaller>=6.3",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/renmurry/DrainageExtractor25"
Issues = "https://github.com/renmurry/DrainageExtractor25/issues"

[project.gui-scripts]
drainage-extractor = "drainage_extractor.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"drainage_extractor.gui" = ["resources/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning:pyogrio.*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
